legacy/additional_testing/gcc_crash_stats/results/gcc482/save_st/pr62178.c-4.8.2-3.out.txt
pr62178.c:4:9: error: attribute(target("+nosve")) is unknown
 #pragma GCC target "+nosve"
         ^
pr62178.c:8:1: error: attribute(target("+nosve")) is unknown
 void foo (void) {
 ^
